--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -151,6 +151,8 @@
     <ClCompile Include="Engine\Texture.cpp" />
     <ClCompile Include="Engine\Transform.cpp" />
     <ClCompile Include="Ground.cpp" />
+    <ClCompile Include="HUD.cpp" />
+    <ClCompile Include="Infomation.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Tank.cpp" />
     <ClCompile Include="TankHead.cpp" />
@@ -184,6 +186,8 @@
     <ClInclude Include="Engine\Texture.h" />
     <ClInclude Include="Engine\Transform.h" />
     <ClInclude Include="Ground.h" />
+    <ClInclude Include="HUD.h" />
+    <ClInclude Include="Infomation.h" />
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="Tank.h" />
     <ClInclude Include="TankHead.h" />
